--- a/LocalLinks/src/CHANGELOG
+++ b/LocalLinks/src/CHANGELOG
@@ -1,3 +1,6 @@
+== LocalLinks 1.3 (2015-05-31)
+  + Support Chrome 51
+
 == LocalLinks 1.2 (2015-05-18)
   + Add href = "chrome-devtools://" attribute on left click
 
